package v2.data.inputfiles.arrows.aggregation;

public class Professor {
    private String name;

    public Professor(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }
}