package v2.data.inputfiles.arrows.realization;

public interface PaymentMethod {
    void pay(double amount);
}