' Generated by UML Generator
' Encoded: bLJRQkCm47tNLmZweZPnsETGGeDJwC9k2Pl-W69DKr7RCheiT2_zzkfYoOxb3TqN8ysSCsTkyftIL6hJr4YzyhQZaZQuggbIMwqbFneDNolH7lWlm5_G2sU0Aowh6X3oABm3oz4Dj1h_HXWN33hzI1jOuuFbjoTdwwHu1gM4L6lyZIjzku-6ZNCNzhCOuf1fY2M-4E3QaK-WTps9N8-KdID1bNDDvV_6Ef8jbD5EIl0v9WmPksC64_KKkHH6AWXXAtyk1JiB7gnFNDUvPc2JdBZ4CxIOIvdWMJ_AWJMNxK4RbeOvxGAqKjGri11ZtPUMSksvPzrPuddIFxeMZFTd5EVkbLAQ3yB4daeXchWNF-nvs2aF8b79-OOT2CWKprqlJDwv_sleEr6PuL7O5wJj9GiRKMG26CRepNC2UtlL4BPrqRaBOQ9Q9s5B-Iau6mZRbZUqzlYhsHe38AzITK1VIHQlfA6uXJrychGJfq2oXyyhIM1SbrIoFNqRDTKQ7arp19a_cYc3v62lsD4tGXjXNEkPCCSQHkg-mS-q0jn7-GxwHJ2l_dwHEVefYg8O_YqelguRQ-rNEcooWxabGt6kgzKcpHAvNXV5dqq_HEJQEBxd7LgjhFSiRNG7BRF_-Gy
' URL: http://www.plantuml.com/plantuml/uml/bLJRQkCm47tNLmZweZPnsETGGeDJwC9k2Pl-W69DKr7RCheiT2_zzkfYoOxb3TqN8ysSCsTkyftIL6hJr4YzyhQZaZQuggbIMwqbFneDNolH7lWlm5_G2sU0Aowh6X3oABm3oz4Dj1h_HXWN33hzI1jOuuFbjoTdwwHu1gM4L6lyZIjzku-6ZNCNzhCOuf1fY2M-4E3QaK-WTps9N8-KdID1bNDDvV_6Ef8jbD5EIl0v9WmPksC64_KKkHH6AWXXAtyk1JiB7gnFNDUvPc2JdBZ4CxIOIvdWMJ_AWJMNxK4RbeOvxGAqKjGri11ZtPUMSksvPzrPuddIFxeMZFTd5EVkbLAQ3yB4daeXchWNF-nvs2aF8b79-OOT2CWKprqlJDwv_sleEr6PuL7O5wJj9GiRKMG26CRepNC2UtlL4BPrqRaBOQ9Q9s5B-Iau6mZRbZUqzlYhsHe38AzITK1VIHQlfA6uXJrychGJfq2oXyyhIM1SbrIoFNqRDTKQ7arp19a_cYc3v62lsD4tGXjXNEkPCCSQHkg-mS-q0jn7-GxwHJ2l_dwHEVefYg8O_YqelguRQ-rNEcooWxabGt6kgzKcpHAvNXV5dqq_HEJQEBxd7LgjhFSiRNG7BRF_-Gy
' Generated on: 2025-08-09T22:58:34.127090

@startuml
skinparam classAttributeIconSize 0
hide circle

class Department {
  -deptName: String
  -professors: List<Professor>
  --
  +Department(deptName: String, professors: List<Professor>)
  +getDeptName(): String
  +getProfessors(): List<Professor>
}

class Professor {
  -name: String
  --
  +Professor(name: String)
  +getName(): String
}

class Course {
  -courseCode: String
  -courseTitle: String
  --
  +Course(courseCode: String, courseTitle: String)
  +getCourseCode(): String
  +getCourseTitle(): String
}

class Student {
  -name: String
  -enrolledCourse: Course
  --
  +Student(name: String, enrolledCourse: Course)
  +getName(): String
  +getEnrolledCourse(): Course
}

class House {
  -rooms: List<Room>
  --
  +House()
  +getRooms(): List<Room>
}

class Room {
  -name: String
  --
  +Room(name: String)
  +getName(): String
}

class Document {
  -content: String
  --
  +Document(content: String)
  +getContent(): String
}

class Printer {
  +print(doc: Document): void
}

class Animal {
  #name: String
  --
  +Animal(name: String)
  +speak(): void
}

class Cat {
  +Cat(name: String)
  +speak(): void
}

class Dog {
  +Dog(name: String)
  +speak(): void
}

class CreditCardPayment {
  -cardNumber: String
  --
  +CreditCardPayment(cardNumber: String)
  +pay(amount: double): void
}

interface PaymentMethod {
  ~pay(amount: double): void
}

Department o-- Professor
Student *-- Course
House o-- Room
Printer ..> Document
Cat --|> Animal
Dog --|> Animal
CreditCardPayment ..|> PaymentMethod
@enduml